# ensembl-genes

./: .gitignore  .pre-commit-config.yaml  README.md  alt_alleles.snappy.parquet  ensembl_database_tables.ipynb  ensembl_genes_eda.ipynb  genes.snappy.parquet  genes.xlsx  old_to_newest.snappy.parquet  pyproject.toml  setup.cfg  updates.snappy.parquet  updates.xlsx  xref_go.snappy.parquet  xref_ncbigene.snappy.parquet  xref_ncbigene.xlsx
.github/actions/setup/: action.yaml
.github/workflows/: build.yaml  export.yaml  test.yaml
ensembl_genes/: commands.py  ensembl_genes.py  models.py  releases.py  species.py
ensembl_genes/notebooks/: ensembl_database_tables.ipynb  ensembl_genes_eda.ipynb  ensembl_genes_output.ipynb
ensembl_genes/queries/: gene_alt_alleles.sql  gene_attrib_counts.sql  gene_events.sql  gene_xrefs.sql  gene_xrefs_go.sql  genes.sql
src/: ensembl_database_tables.ipynb  ensembl_genes.py  ensembl_genes_eda.ipynb  ensembl_genes_output.ipynb
src/queries/: gene_xrefs.sql
src/tests/: ensembl_gene_test.py
tests/: commands_test.py  ensembl_gene_test.py  releases_test.py  species_test.py
