[tool.poetry]
name = "ensembl_genes"
version = "0.0.0"
description = "Ensembl Genes Extraction"
authors = ["Related Sciences Data Team"]

# https://python-poetry.org/docs/versions/
[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.4.0"
pandas = "^1.3.3"
pytest = "^6.2.5"
sqlalchemy = "^1.4.25"
pre-commit = "^2.15.0"