[tool.poetry]
name = "ensembl_genes"
version = "0.0.0"
description = "Ensembl Genes Extraction"
authors = ["Related Sciences Data Team"]

# https://python-poetry.org/docs/versions/
[tool.poetry.dependencies]
python = "^3.9"
fastparquet = "^0.7.1"
fire = "^0.4.0"
mysql-connector-python = "^8.0.26"
nbconvert = "^6.2.0"
notebook = "^6.4.4"
pandas = "^1.3.3"
papermill = "^2.3.3"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
sqlalchemy = "^1.4.25"

# https://pycqa.github.io/isort/docs/configuration/config_files.html
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.9"

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
module = [
    "fire.*",
    "pandas.*",
    "papermill.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

