[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ensembl_genes"
version = "0.0.0"
description = "Extract the Ensembl gene catalog to simple tables."
authors = ["Related Sciences Data Team"]
readme = "README.md"
repository = "https://github.com/related-sciences/ensembl-genes"
license = "Apache-2.0"
include = ["ensembl_genes/queries/*.sql", "ensembl_genes/notebooks/*.ipynb"]

[tool.poetry.scripts]
ensembl_genes = "ensembl_genes.ensembl_genes:Commands.command"

# https://python-poetry.org/docs/versions/
[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^7.0.0"
typer = {extras = ["all"], version = "^0.9.0"}
jupyter = "^1.0.0"
mysql-connector-python = "^8.0.26"
nbconvert = "^6.2.0"
notebook = "^6.4.4"
openpyxl = "^3.0.9"
pandas = "^1.3.3"
papermill = "^2.3.3"
requests = "^2.26.0"
sqlalchemy = "^1.4.25"
tabulate = "^0.8.9"
bioregistry = "^0.9.64"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"

[tool.ruff]
target-version = "py310"
ignore = [
    "E501",  # line-too-long (black should handle)
]
line-length = 88
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycode warnings
]

[tool.mypy]
python_version = "3.10"

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
module = [
    "bioregistry.*",
    "pandas.*",
    "papermill.*",
    "requests.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true
